# multi-party-ecdsa

./: Cargo.toml
src/protocols/multi_party_ecdsa/gg_2020/: orchestrate.rs
src/protocols/multi_party_ecdsa/gg_2020/state_machine/: keygen.rs
src/protocols/multi_party_ecdsa/gg_2020/state_machine/keygen/: rounds.rs
src/utilities/mta/: mod.rs
